--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,6 @@
-// GLOBAL STYLES
+// PARTIALS STYLES
+@import "variables";
 @import "global";
 // COMPONENT
+@import "./components/header";
+@import "./components/mainarea";
