--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -6,6 +6,17 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
+}
 body {
 	font-family: "Mulish", sans-serif;
 	line-height: 1.2;
